# se-toolkit-lab-7

./: .gitignore  README.md  docker-compose.yml  test_env_load.py
bot/: .gitignore  DOCKERFILE  PLAN.md  backend_client.py  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  basic.py  commands.py
bot/services/: llm_client.py  lms_client.py
